fixed header close button z-index

--- a/assets/css/3-sections/header.sass
+++ b/assets/css/3-sections/header.sass
@@ -113,9 +113,11 @@
 
 @media (max-width: 775px)
   .home-wrap
+    background-color: white
     header
       width: auto
       padding: 0
+      z-index: 2
 
       .header-position
         width: auto
@@ -125,6 +127,7 @@
         left: auto
         flex-direction: row
         align-items: center
+        z-index: 2
 
       .site-nav,
       .email-link
@@ -134,12 +137,14 @@
         height: 60px
         width: 60px
         margin: 5px 10px
+        z-index: 2
 
       .logo-text
         display: none
 
       .mobile-nav-toggle
         display: flex
+        z-index: 2
 
   .mobile-nav.is-open
     display: block
